Add anchoring for pattern matching + fix the test